--- a/BallClub/BallClub/Storyboards/User.storyboard
+++ b/BallClub/BallClub/Storyboards/User.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--User View Controller-->
+        <!--User-->
         <scene sceneID="bzF-x7-QnM">
             <objects>
                 <viewController id="1Qb-0J-YXH" customClass="UserViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
@@ -222,10 +222,12 @@
                             <constraint firstAttribute="trailingMargin" secondItem="bjX-bL-gko" secondAttribute="trailing" id="zgf-w3-mhu"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="User" image="ic_tabbar_user" id="qFO-xe-kE6"/>
                     <navigationItem key="navigationItem" id="AeX-RC-C04"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
                     <connections>
                         <outlet property="friendsTableView" destination="boT-a7-I9B" id="NTa-4B-qDk"/>
+                        <outlet property="searchTextField" destination="YE4-Qp-X6L" id="iQb-r3-N31"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7uS-SA-01D" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -236,6 +238,7 @@
     <resources>
         <image name="ic_search" width="100" height="100"/>
         <image name="ic_settings" width="512" height="512"/>
+        <image name="ic_tabbar_user" width="30" height="30"/>
         <image name="player_calvin" width="229" height="166"/>
     </resources>
 </document>
